# comfyui-prevent-sleep

./: README.md  __init__.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
js/: index.js
libs/: install.py  screen.py  sleep.py
py/: install.py  screen.py  sleep.py  wakeup.py
web/js/: index.js
