[project]
name = "comfyui-prevent-sleep"
description = "Prevent sleep while running ComfyUI."
version = "1.0.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-prevent-sleep"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-prevent-sleep"
Icon = ""
